tests/output/self_hosted/union_duplicate_error.txt
tests/union_duplicate_error.oomph:1: error: repeated union member 'Int'

    typedef Foo = Int | Str | Int
                  ^^^^^^^^^^^^^^^

